I Complete the dashbord info widget

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "featuredinfo",
+        "Revanue",
         "topbar"
     ],
     "marquee.widgets.npm-stats.packageNames": [
